--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "db-config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3-rc.0",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.15"
   }
 }
