--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "db-config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/vitaliiptp/react-welcome-to-space-backend#readme",
   "dependencies": {
+    "argon2": "^0.28.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "mysql2": "^2.3.3-rc.0",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.15"
